// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  idUser            Int       @id @default(autoincrement())
  firebaseUid       String    @unique
  firstName         String?   @db.VarChar(45)
  lastName          String?   @db.VarChar(45)
  email             String?   @db.VarChar(70)
  phoneNumber       String?   @unique @db.Char(9) 
  lastActive        DateTime?
  profilePictureUrl String?   @db.VarChar(1000)
  isVerified        Boolean   @default(false)
  verifiedAt        DateTime?
  City              City      @relation(fields: [City_idCity], references: [idCity])
  City_idCity       Int

  ServiceProviders Service_Provider[]
  Clients          Client[]
  Payments         Payment[]
}

model City {
  idCity   Int     @id @default(autoincrement())
  name     String  @unique @db.VarChar(70)
  imageUrl String? @db.VarChar(500)
  Users    User[]
}

model Service_Provider {
  idService_Provider Int     @id @default(autoincrement())
  User               User    @relation(fields: [User_idUser], references: [idUser])
  User_idUser        Int
  isActive           Boolean @default(true)

  Advertisements         Advertisement[]
  ArchivedAdvertisements AdvertisementArchive[] @relation("ServiceProviderToAdvertisementArchive")
  Bookings               Booking[]
  Reports                Report[]
  Reviews                Review[]

  @@map("service__provider")
}

model Advertisement {
  idAdvertisement                     Int                 @id @default(autoincrement())
  title                               String              @db.VarChar(100)
  description                         String?             @db.VarChar(1000)
  price                               Float?
  status                              StatusAdvertisement @default(ACTIVE)
  startDate                           DateTime            @default(now())
  endDate                             DateTime
  createdAt                           DateTime            @default(now())
  serviceStartTime                    DateTime?           @db.Time
  serviceEndTime                      DateTime?           @db.Time
  Service                             Service             @relation(fields: [Service_idService], references: [idService])
  Service_idService                   Int
  Service_Provider                    Service_Provider    @relation(fields: [Service_Provider_idService_Provider], references: [idService_Provider])
  Service_Provider_idService_Provider Int

  Archives             Archive[]
  Images               AdvertisementImage[]
  SavedBy              SavedAdvertisement[]
  AdvertisementSpieces AdvertisementSpiece[]
  Bookings             Booking[]

  @@unique([title, Service_Provider_idService_Provider])
}

enum StatusAdvertisement {
  ACTIVE
  INACTIVE
  PENDING
  BOOKED
}

model Service {
  idService Int    @id @default(autoincrement())
  name      String @unique @db.VarChar(120)

  Advertisements         Advertisement[]
  ArchivedAdvertisements AdvertisementArchive[] @relation("ServiceToAdvertisementArchive")
}

model Booking {
  idBooking     Int      @id @default(autoincrement())
  startDateTime DateTime
  endDateTime   DateTime
  updatedAt     DateTime @updatedAt

  message String?       @db.VarChar(1000)
  status  BookingStatus @default(PENDING)
  price   Float?

  Client                              Client           @relation(fields: [Client_idClient], references: [idClient])
  Client_idClient                     Int
  Service_Provider                    Service_Provider @relation(fields: [Service_Provider_idService_Provider], references: [idService_Provider])
  Service_Provider_idService_Provider Int
  Advertisement                       Advertisement?   @relation(fields: [advertisementId], references: [idAdvertisement])
  advertisementId                     Int?

  Pets    BookingPet[]
  Reports Report[]
  Reviews Review[]
}

enum BookingStatus {
  PENDING
  ACCEPTED
  REJECTED
  CANCELLED
  AWAITING_PAYMENT
  OVERDUE
  PAID
}

model BookingPet {
  idBookingPet      Int     @id @default(autoincrement())
  Booking           Booking @relation(fields: [Booking_idBooking], references: [idBooking])
  Booking_idBooking Int
  Pet               Pet     @relation(fields: [Pet_idPet], references: [idPet])
  Pet_idPet         Int

  @@unique([Booking_idBooking, Pet_idPet])
}

model Client {
  idClient    Int  @id @default(autoincrement())
  User        User @relation(fields: [User_idUser], references: [idUser])
  User_idUser Int

  Bookings            Booking[]
  Pets                Pet[]
  SavedAdvertisements SavedAdvertisement[]
  Reports             Report[]
  Reviews             Review[]
}

model Review {
  idReview  Int      @id @default(autoincrement())
  rating    Int
  comment   String?  @db.VarChar(1000)
  createdAt DateTime @default(now())

  Client                              Client           @relation(fields: [Client_idClient], references: [idClient])
  Client_idClient                     Int
  Service_Provider                    Service_Provider @relation(fields: [Service_Provider_idService_Provider], references: [idService_Provider])
  Service_Provider_idService_Provider Int
  Booking                             Booking          @relation(fields: [Booking_idBooking], references: [idBooking])
  Booking_idBooking                   Int              @unique

  @@index([Service_Provider_idService_Provider])
}

enum Severity {
  LOW
  MODERATE
  HIGH
}

model Pet {
  idPet             Int      @id @default(autoincrement())
  name              String   @db.VarChar(45)
  age               Decimal  @db.Decimal(3, 0)
  description       String?  @db.VarChar(500)
  chronicDiseases   String[] @default([])
  isHealthy         Boolean?
  customSpeciesName String?  @db.VarChar(60)

  Spiece          Spiece  @relation(fields: [Spiece_idSpiece], references: [idSpiece])
  Spiece_idSpiece Int
  Client          Client? @relation(fields: [Client_idClient], references: [idClient])
  Client_idClient Int?

  Images   PetImage[]
  Archives Archive[]
  Analyses Analysis[]
  Bookings BookingPet[]
}

model PetImage {
  idPetImage Int    @id @default(autoincrement())
  imageUrl   String @db.VarChar(1000)
  order      Int?

  Pet       Pet @relation(fields: [Pet_idPet], references: [idPet])
  Pet_idPet Int
}

model Spiece {
  idSpiece Int    @id @default(autoincrement())
  name     String @unique @db.VarChar(60)

  Pets                 Pet[]
  AdvertisementSpieces AdvertisementSpiece[]
}

model Archive {
  idArchive Int           @id @default(autoincrement())
  date      DateTime
  status    StatusArchive @default(COMPLETED)

  Pet                           Pet           @relation(fields: [Pet_idPet], references: [idPet])
  Pet_idPet                     Int
  Advertisement                 Advertisement @relation(fields: [Advertisement_idAdvertisement], references: [idAdvertisement])
  Advertisement_idAdvertisement Int
}

enum StatusArchive {
  COMPLETED
  CANCELLED
  PENDING
}

model AdvertisementArchive {
  idAdvertisementArchive  Int                 @id @default(autoincrement())
  originalAdvertisementId Int                 @unique
  title                   String              @db.VarChar(100)
  description             String?             @db.VarChar(1000)
  price                   Float?
  status                  StatusAdvertisement @default(INACTIVE)
  startDate               DateTime
  endDate                 DateTime
  createdAt               DateTime            @default(now())
  serviceStartTime        DateTime?           @db.Time
  serviceEndTime          DateTime?           @db.Time
  serviceId               Int
  serviceProviderId       Int
  deletedAt               DateTime            @default(now())
  imagesUrls              Json?

  Service          Service          @relation("ServiceToAdvertisementArchive", fields: [serviceId], references: [idService])
  Service_Provider Service_Provider @relation("ServiceProviderToAdvertisementArchive", fields: [serviceProviderId], references: [idService_Provider])

  @@index([originalAdvertisementId])
}

model AdvertisementImage {
  idAdvertisementImage Int    @id @default(autoincrement())
  imageUrl             String @db.VarChar(1000)
  order                Int?

  Advertisement                 Advertisement @relation(fields: [Advertisement_idAdvertisement], references: [idAdvertisement])
  Advertisement_idAdvertisement Int
}

model Symptom {
  idSymptom       Int      @id @default(autoincrement())
  code            String   @unique @db.VarChar(50)
  name            String   @db.VarChar(100)
  description     String?  @db.VarChar(500)
  defaultSeverity Severity @default(MODERATE)
}

model Analysis {
  idAnalysis Int      @id @default(autoincrement())
  inputData  Json
  diagnoses  Json
  createdAt  DateTime @default(now())

  Pet       Pet @relation(fields: [Pet_idPet], references: [idPet])
  Pet_idPet Int
}

model SavedAdvertisement {
  id                            Int           @id @default(autoincrement())
  savedAt                       DateTime      @default(now())
  Client                        Client        @relation(fields: [Client_idClient], references: [idClient])
  Client_idClient               Int
  Advertisement                 Advertisement @relation(fields: [Advertisement_idAdvertisement], references: [idAdvertisement])
  Advertisement_idAdvertisement Int

  @@unique([Client_idClient, Advertisement_idAdvertisement])
}

model AdvertisementSpiece {
  advertisement   Advertisement @relation(fields: [advertisementId], references: [idAdvertisement])
  advertisementId Int
  spiece          Spiece        @relation(fields: [spieceId], references: [idSpiece])
  spieceId        Int

  @@id([advertisementId, spieceId])
}

model Payment {
  id              Int      @id @default(autoincrement())
  userId          Int
  stripeSessionId String   @unique
  amount          Int
  status          String
  type            String
  createdAt       DateTime @default(now())
  User            User     @relation(fields: [userId], references: [idUser])
}

model Report {
  idReport  Int      @id @default(autoincrement())
  message   String?  @db.VarChar(1000)
  createdAt DateTime @default(now())

  Booking           Booking @relation(fields: [Booking_idBooking], references: [idBooking])
  Booking_idBooking Int

  Client          Client @relation(fields: [Client_idClient], references: [idClient])
  Client_idClient Int

  Service_Provider                    Service_Provider @relation(fields: [Service_Provider_idService_Provider], references: [idService_Provider])
  Service_Provider_idService_Provider Int
}
